labs/15-Route/nginx-https-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-service
  namespace: test
spec:
  host: api.crc.testing
  port:
    targetPort: http
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFBzCCAu+gAwIBAgIJAO0Kcm6gJ4neMA0GCSqGSIb3DQEBCwUAMBoxGDAWBgNV
[...]
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFBzCCAu+gAwIBAgIJAO0Kcm6gJ4neMA0GCSqGSIb3DQEBCwUAMBoxGDAWBgNV
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIJQgIBADANBgkqhkiG9w0BAQEFAASCCSwwggkoAgEAAoICAQDRCAcmyhDGtrtc
[...]
      pCwWYpedYDHZlYWnONiSQPEyChAUyw==
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: nginx-service
    weight: 100
  wildcardPolicy: None
