labs/15-Route/whoami-path-based-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: whoami-path-based-route
spec:
  host: api.crc.testing
  path: "/whoami"   
  to:
    kind: Service
    name: whoami-service
